# mon_api

./: .gitignore  README.md  create_agents.py  db.sqlite3  main.py  manage.py  pyproject.toml  ticket_classifier.joblib
ma_sn/: asgi.py  settings.py  urls.py  wsgi.py
ml/: train_model.py
ticket/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
ticket/migrations/: 0001_initial.py  0002_initial_departments.py
